# miden-vm

air/: Cargo.toml
air/src/: lib.rs  options.rs  utils.rs
assembly/: Cargo.toml
assembly/src/procedures/: mod.rs
core/: Cargo.toml
core/src/: outputs.rs
miden/: Cargo.toml
processor/: Cargo.toml
processor/src/chiplets/bus/: aux_trace.rs
processor/src/decoder/: aux_hints.rs
processor/src/range/: aux_trace.rs
processor/src/stack/: aux_trace.rs  overflow.rs
processor/src/trace/: mod.rs
prover/: Cargo.toml
prover/src/: lib.rs
verifier/: Cargo.toml
